--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -12,7 +12,7 @@
 
 .home-container {
     width: 100%;
-    padding: 2rem 1rem;
+    padding: 2rem 0;
     display: flex;
     flex-direction: column;
 }
@@ -47,6 +47,7 @@
 .home-details {
     width: 100%;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 @media (min-width: 768px) {
