--- a/src/styles/components/Navbar.module.css
+++ b/src/styles/components/Navbar.module.css
@@ -8,10 +8,9 @@
     padding: 1rem;
     border-bottom: 1px solid #333;
     position: fixed;
-    width: 100vw;
     height: 3.5rem;
     background-color: #000000;
-}
+    width: calc(100vw - 12px);}
   
 .navbar {
     display: flex;
